# smwasm-python

./: .project  Cargo.toml  README.md  setup.cfg  setup.py
smartmodule/: .project  setup.py
smartmodule/_test/: _testit.py
smartmodule/smwasm/: _test.py  smh.py  smu.py
smartmodule/smwasm/base/: _py2_base.py  _py3_base.py  _py_base.py
smartmodule/smwasm/wasm/: load.py
smwasm/: smh.py  smu.py
smwasm/base/: _py2_base.py  _py3_base.py  _py_base.py
smwasm/core/: smcore.py
src/: lib.rs
